corkboard init w/ shitty browser cache

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import App from '../components/App';
+import '../styles/index.css';
 ---
 
 <!DOCTYPE html>
@@ -6,10 +8,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>139</title>
+  <title>139 - Pegboard</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
-  <h1>hi andrew. -teddy</h1>
+  <App client:load />
 </body>
 </html>
 
