--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import '../styles/index.css';
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>139 - Pegboard</title>
+  <title>onethreenine</title>
   <style>
     html, body {
       margin: 0;
