--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -189,4 +189,4 @@ html {
 }
 
 /* Import sleeker fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Inter:wght@400;500;600&family=Outfit:wght@400;500;600&display=swap');
