menu caputre fix

--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -5,7 +5,7 @@ import '../styles/index.css';
 ---
 
 <Layout 
-  title="menu | onethreenine" 
+  title="a menu from onethreenine" 
   description="View and edit the dinner menu on onethreenine.net"
 >
   <MenuComponent client:load />
